--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <section>
         <div class="intro-header">
           <h1>Kia ora! I'm Andre...</h1>
-          <p>Full‑Stack Web & Systems Developerr</p>
+          <p>Full‑Stack Web & Systems Developer</p>
         </div>
         <h5 class="intro-description">
           I’m a highly autonomous Full‑Stack Systems Architect and Data
