--- a/index.html
+++ b/index.html
@@ -146,14 +146,14 @@
               </div>
               <p>The Simple 30 Workouts Training Plan.</p>
               <div class="project-links">
-                <a target="_blank" rel="noopener noreferrer" href="https://brogram-plan.netlify.app">Live</a>
-                <a target="_blank" rel="noopener noreferrer" href="https://github.com/jamezmca/2_brogram">GitHub</a>
+                <a target="_blank" rel="noopener noreferrer" href="https://andresworkoutapp.netlify.app/">Live</a>
+                <a target="_blank" rel="noopener noreferrer" href="https://github.com/Andre-tech671/2_brogram">GitHub</a>
               </div>
             </div>
             <div class="img-div">
               <img
                 class="big-img"
-                src="https://github.com/jamezmca/1_web_portfolio/blob/main/public/brogram.png?raw=true"
+                src="https://github.com/Andre-tech671/2_brogram/blob/main/brogram_app.png"
                 alt="brogram-thumbnail"
               />
             </div>
