--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <div class="img-div">
               <img
                 class="big-img"
-                src="https://github.com/Andre-tech671/2_brogram/blob/main/brogram_app.png"
+                src="https://github.com/Andre-tech671/2_brogram/blob/main/brogram_app.png?raw=true"
                 alt="brogram-thumbnail"
               />
             </div>
