--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
         <a href="https://stackdretech.netlify.app/" target="_blank" rel="noopener noreferrer">
           Andre-tech671
         </a>
-        ⭐️ the repo on <a target="_blank" rel="noopener noreferrer" href="">GitHub</a>
+        ⭐️ the repo on <a target="_blank" rel="noopener noreferrer" href="https://github.com/Andre-tech671">GitHub</a>
       </p>
     </footer>
 
